--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
         </section>
         <section class="resultados-pesquisa" id="resultados-pesquisa">
         </section>
+        <p>As informações desse site foram obtidas com auxílio de Inteligência Artificial e curadoria humana. Use-as com parcimônia e se necessário, confirme-as usando fontes oficiais.</p>
     </main>
+    
+    <p>2024 - Parasitoses humanas. Todos os direitos reservados</p>
     <footer>
-        <p>2024 - Parasitoses humanas. Todos os direitos reservados</p>
+   
     </footer>
     <script src="dados.js"></script>
     <script src="app.js"></script>
